# EasingCubicBezier

./: CMakeLists.txt  LICENSE  README.md
cmake/: EasingCubicBezierConfig.cmake.in
include/: BezierCubicCurve.hpp  Polynomial.hpp  easingCubicBezier.hpp
tests/: benchmark.cpp  cubic_bezier.hpp  test_cubic_bezier.cpp
